# metaai

./: DESIGN_RATIONALE.md  Dockerfile  ENVIRONMENT_SPEC.md  inference.py  pyproject.toml  requirements.txt
graders/: grader_api_contract.py  grader_config_usage.py  grader_determinism.py  grader_edge_cases.py  grader_explain_reward.py  grader_hidden_tests.py  grader_info_keys.py  grader_invalid_actions.py  grader_observation_bounds.py  grader_render_cli.py  grader_reward_contract.py  grader_scenarios.py  grader_state_openenv.py  grader_terminal_distinction.py
logs/: efficiency_curve.csv  eval_trajectory.csv
scripts/: app.py.py  plot_results.py
src/vaxgym/: __init__.py  cli_demo.py  config.py  enums.py  environment.py  models.py  reward.py  scenarios.py  wrappers.py
src/vaxgym.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api_contract.py  test_determinism.py  test_import_package.py  test_info_contract_paths.py  test_info_keys.py  test_invalid_actions.py  test_models.py  test_render_state.py  test_reset.py  test_reward.py  test_reward_logic.py  test_scenarios.py  test_step_contract.py  test_terminal_conditions.py  test_vaxguard_features.py
