[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaxgym"
version = "0.1.0"
description = "VaxGym: A Gym-style RL environment for smart vaccine cold-chain management"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.24.0"
]
